--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "pure-react-carousel": "^1.12.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-player": "^1.4.0",
     "react-reveal": "^1.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
